# nix-gl-host-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  result
src/: gpu.rs  main.rs
