[package]
name = "nixglhost"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
glob = "0.3.2"
lazy_static = "1.5.0"
nix = { version = "0.29.0", features = ["fs"] }
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
structopt = "0.3.26"
tempfile = "3.13.0"
